CDS dynamic dump crashes when verifying unlinked class from static archive

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 22
    • Affects Version/s: 22
    • Component/s: hotspot
    • b09

      Scenario:

      class Foo with class version 51, one of its supertypes, Bar is version 49.
      class Bar cannot be verified - linking Bar would result in VerifyError.

      Dump Foo and Bar in a static archive.
      Both classes will be in "unlinked" state because class Bar is old.

      Issue encountered when Foo is verified at runtime while dumping the dynamic archive.

            Assignee:
            Calvin Cheung (Inactive)
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: