8312181: CDS dynamic dump crashes when verifying unlinked class from static archive