src/hotspot/share/cds/dumpTimeClassInfo.cpp
@@ -152,11 +152,17 @@ DumpTimeClassInfo* DumpTimeSharedClassTable::allocate_info(InstanceKlass* k) {
 }
 
 DumpTimeClassInfo* DumpTimeSharedClassTable::get_info(InstanceKlass* k) {
-  assert(!k->is_shared(), "Do not call with shared classes");
+  if (DumpSharedSpaces) {
+    assert(!k->is_shared(), "Do not call with shared classes");
+  } else {
+    assert(DynamicDumpSharedSpaces, "sanity");
+  }
   DumpTimeClassInfo* p = get(k);
-  assert(p != nullptr, "we must not see any non-shared InstanceKlass* that's "
-         "not stored with SystemDictionaryShared::init_dumptime_info");
-  assert(p->_klass == k, "Sanity");
+  if (DumpSharedSpaces) {
+    assert(p != nullptr, "we must not see any non-shared InstanceKlass* that's "
+           "not stored with SystemDictionaryShared::init_dumptime_info");
+    assert(p->_klass == k, "Sanity");
+  }
   return p;
 }
 
